--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -53,7 +53,6 @@
 	margin: 0 auto;
 	max-width: $header-width;
 	position: relative;
-	min-width: 380px;
 }
 .site-branding {
 	position: relative;
