--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -94,6 +94,7 @@
 
 	.main-navigation ul {
 		display: none;
+		line-height: 1.5;
 	}
 }
 
